# quick-snake

./: .clang-format  .color_coded  .gitignore  .ycm_extra_conf.py  3  CMakeLists.txt  Makefile  README.md  colors.hpp  curse  drawable.cpp  drawable.hpp  food.h  game.cpp  game.h  game.hpp  interface_drawable.cpp  interface_drawable.h  interface_drawable.hpp  main.cpp  qsnake  screen.h  screen.hpp  snake.cpp  snake.h  snake.hpp  snake2.h  snake_game_using.hpp  window.h  window.hpp
curses-wrapper/: screen.hpp  window.hpp
util/: logger.h
